--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@toolpad/core": "^0.11.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
